anna edits to appendices B, D, E. note: changed some tables

--- a/output/abc_compromises.tex
+++ b/output/abc_compromises.tex
@@ -6,14 +6,14 @@
 \footnotesize
 \begin{tabular}{ccccc} \toprule
 Child ID & Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
-N/A (Case A) & Treatment & Left the study & None & Missing at random \\
-N/A (Case B) & Treatment & Left the study & None & Missing at random \\
-N/A (Case C) & Treatment & Left the study & None & Missing at random \\
-N/A (Case D) & Treatment & Left the study & No data & Missing at random \\ \midrule
-.x    & Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after dead \\
-914 & Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after dead \\
-74 & Treatment & Died (age 0), SIDS & Baseline; before dead & Attrition after dead \\
-99 & Treatment  & Died (age 4), pedestrian accident & Baseline; before dead & Attrition after dead \\ \midrule
+Case A & Treatment & Left the study & None & Missing at random \\
+Case B & Treatment & Left the study & None & Missing at random \\
+Case C & Treatment & Left the study & None & Missing at random \\
+Case D & Treatment & Left the study & None & Missing at random \\ \midrule
+.x    & Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
+914 & Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
+74 & Treatment & Died (age 0), SIDS & Baseline; before dead & Attrition after death \\
+99 & Treatment  & Died (age 4), pedestrian accident & Baseline; before dead & Attrition after death \\ \midrule
 82 & Control       & Moved at age 15 &   Baseline; before age 15 & Attrition after age 15 \\ \midrule
 900 & Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
 912 & Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
