--- a/output/abc_noncomp_e2.tex
+++ b/output/abc_noncomp_e2.tex
@@ -6,9 +6,10 @@
 \begin{tabular}{ccccc} \toprule
  & (1) & (2) & (3) & (4) \\
  & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \midrule
- &  &  & & \\\
-Treatment - Control Mean Difference & 12.908 &  & 4.284 &  \\
- & (2.901) &  & (2.647) &  \\
+ &  &  & & \\
+Treatment - Control & 12.908 &  & 4.284 &  \\
+ Mean Difference & (2.901) &  & (2.647) &  \\
+  &  &  & & \\
 Bloom &  & 15.111 &  & 5.016 \\
  &  & (3.061) &  & (2.960) \\ \\ \midrule
 Observations & 104 & 104 & 104 & 104 \\
