--- a/output/ihdp_bayley.tex
+++ b/output/ihdp_bayley.tex
@@ -5,10 +5,11 @@
 \centering 
 \begin{tabular}{lcc} \toprule
  & (1) & (2) \\
- & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \midrule
- &  &  \\\
-Mean Treatment - Mean Control & 0.142 & 9.958 \\
- & (0.968) & (1.498) \\
+ & Bayley MDI & Bayley MDI \\ 
+ & 12 Months & 24 Months \\ \midrule
+ &  &  \\
+Treatment - Control & 0.142 & 9.958 \\
+Mean Difference & (0.968) & (1.498) \\
  &  &  \\ \midrule
 Observations & 893 & 910 \\
 $R^2$ & 0.000 & 0.067 \\ \midrule
