--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -5,8 +5,9 @@
 \centering 
 \begin{tabular}{lcc} \toprule
  & (1) & (2) \\
- & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \midrule
- &  &  \\\
+ & Bayley MDI & Bayley MDI \\ 
+ & 12 Months & 24 Months \\ \midrule
+ &  &  \\
 Cohort 1 & 4.841 & -2.901 \\
  & (6.013) & (5.926) \\
 Cohort 2 & 0.071 & 1.882 \\
@@ -20,7 +21,7 @@ $R^2$ & 0.055 & 0.110 \\ \bottomrule
  \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays the mean difference between the treatment and control groups in two measures of the Bayley Mental Development Index, for ABC. Homoskedastic, asymptotic standard errors are in parentheses.
+\item Note: This table displays the mean difference between the treatment and control groups in two measures of the Bayley Mental Development Index for ABC. Homoskedastic, asymptotic standard errors are in parentheses.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
