MT: fixed typos

--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -277,7 +277,7 @@ H_{0}^C &:&  \mathbb{E} \left[ Y_{0} \left( \text{fix } P = 1 \right) \right] = 
 
 \noindent That is, we want to compare the treatment distribution against a counterfactual distribution where children are fixed to no alternative preschool ($H_{0}^B$) and where children are fixed to an alternative preschool ($H_{0}^C$).\footnote{This treats alternative preschool as a binary decision on the extensive margin, which ignores the continuous decisions made on the intensive margin, as we show in Figure~\ref{fig:treatsubabc}. We take this approach because we are limited by our sample size when predicting preschool take-up, as we show in Appendix~\ref{appendix:methodology}.}\\
 
-\noindent To contrast these hypothesis with \eqref{eq:itt}, consider the following estimators: 
+\noindent To contrast these hypotheses with \eqref{eq:itt}, consider the following estimators: 
 
 \begin{eqnarray}
 \text{ITT} \left( \text{fix } P = 0 \right) &=& \mathbb{E} \left[ Y \left( P = 0 \right)  | R = 1 \right] - \mathbb{E} \left[ Y \left( P = 0 \right) | R = 0 \right] \label{eq:ittp0} \\
@@ -309,7 +309,7 @@ Y = \Delta \left( \text{fix } P = 0 \right) R + X \beta + \varepsilon. \label{eq
 
 \subsection{Multiple Treatment Groups}
 
-\noindent We can readily apply the methodology in Section~\ref{section:methodsquestions} to test the hypotheses specified in \eqref{eq:ho}, \eqref{eq:hoB}, or \eqref{eq:hoC} for ABC. For CARE, a simple extension of the framework in Section~\ref{section:methodsquestions} allows us to test various hypotheses that measure the effectiveness of the program given that there were two treatment groups of different levels.\\
+\noindent We can readily extend the methodology in Section~\ref{section:methodsquestions} to test the hypotheses specified in \eqref{eq:ho}, \eqref{eq:hoB}, or \eqref{eq:hoC} for ABC. For CARE, a simple extension of the framework in Section~\ref{section:methodsquestions} allows us to test various hypotheses that measure the effectiveness of the program given that there were two treatment groups of different levels.\\
 
 \noindent As before, let $Y_{d}$ denote a potential outcome. In this case, however, $Y_{0}$ corresponds to fixing the child to no treatment take-up,  $Y_{1}$ to take-up of family education treatment, and $Y_{2}$ to center-based childcare and family education treatment.\footnote{To adjust for program attrition, we can apply a weighting method as in Section~\ref{section:methodsquestions}.} To evaluate the program, we consider the following hypotheses: 
 
